LEAN-2163: LW-R8: Figure options list is cropped and not showing correctly

--- a/styles/Editor.css
+++ b/styles/Editor.css
@@ -221,7 +221,6 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  overflow: hidden;
 }
 
 .ProseMirror .figure-block > .listing {
